--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,13 @@ body {
 
 h1 {
   margin: 50px auto 0 auto;
-  color: #66BFBF;
+  color: #ef4f4f;
   font-family: 'Sacramento', cursive;
   font-size: 5.625rem;
 }
 
 h2 {
-  color: #66BFBF;
+  color: #ef4f4f;
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
@@ -22,12 +22,19 @@ h2 {
 }
 
 h3 {
-  color: #11999E;
+  color: #e5707e;
   font-family: 'Montserrat', sans-serif;
 }
 
 a {
-  color: #11999E;
+  color: #ef4f4f;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #EAF6F6;
 }
 
 p {
@@ -42,7 +49,7 @@ hr {
 }
 
 .top-container {
-  background-color: #e7e7de;
+  background-color: #ee9595;
   position: relative;
   padding-top: 100px;
 }
@@ -52,7 +59,7 @@ hr {
 }
 
 .bottom-container {
-  background-color: #e7e7de;
+  background-color: #ee9595;
   padding: 50px 0 20px;
 }
 
@@ -66,10 +73,16 @@ hr {
   margin: 100px auto 100px auto;
 }
 
-.skill-row {
+.skill-row-right {
   width: 50%;
   margin: 100px auto 100px auto;
   text-align: left;
+}
+
+.skill-row-left {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: right;
 }
 
 .contact-me {
@@ -78,20 +91,16 @@ hr {
   line-height: 2;
 }
 
-.computer-img {
+.left-img {
   width: 25%;
   float: left;
   margin-right: 30px;
 }
 
-.travel-img {
+.right-img {
   width: 25%;
   float: right;
   margin-left: 30px;
-}
-
-.pro {
-  text-decoration: underline;
 }
 
 .top-cloud {
@@ -106,13 +115,19 @@ hr {
   bottom: 300px;
 }
 
+.copyright {
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding:20px 0;
+}
+
 .btn {
-   background: #66BFBF;
-   background-image: -webkit-linear-gradient(top, #66BFBF, #11999E);
-   background-image: -moz-linear-gradient(top, #66BFBF, #11999E);
-   background-image: -ms-linear-gradient(top, #66BFBF, #11999E);
-   background-image: -o-linear-gradient(top, #66BFBF, #11999E);
-   background-image: -webkit-gradient(to bottom, #66BFBF, #11999E);
+   background: #ef4f4f;
+   background-image: -webkit-linear-gradient(top, #ef4f4f, #e5707e);
+   background-image: -moz-linear-gradient(top, #ef4f4f, #e5707e);
+   background-image: -ms-linear-gradient(top, #ef4f4f, #e5707e);
+   background-image: -o-linear-gradient(top, #ef4f4f, #e5707e);
+   background-image: -webkit-gradient(to bottom, #ef4f4f, #e5707e);
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
@@ -124,7 +139,7 @@ hr {
    font-size: 16px;
    font-weight: 100;
    padding: 6px;
-   border: solid #66BFBF 1px;
+   border: solid #ef4f4f 1px;
    text-decoration: none;
    display: inline-block;
    cursor: pointer;
